#
# Copyright (C) Mellanox Technologies Ltd. 2001-2016.  ALL RIGHTS RESERVED.
#
# See file LICENSE for terms.
#

bin_PROGRAMS              = ucx_read_profile
ucx_read_profile_CPPFLAGS = \
    $(BASE_CPPFLAGS) \
    -I$(abs_top_srcdir)/src \
    -I$(abs_top_builddir)/src

ucx_read_profile_CFLAGS   = $(BASE_CFLAGS)

ucx_read_profile_SOURCES  = \
	read_profile.c
