#
# SPDX-FileCopyrightText: NVIDIA CORPORATION & AFFILIATES
# Copyright (c) 2001-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause
#
# See file LICENSE for terms.
#

bin_PROGRAMS              = ucx_read_profile
ucx_read_profile_CPPFLAGS = $(BASE_CPPFLAGS)
ucx_read_profile_CFLAGS   = $(BASE_CFLAGS)
ucx_read_profile_SOURCES  = read_profile.c
ucx_read_profile_LDADD    = \
    $(abs_top_builddir)/src/ucs/libucs.la
