#
# Copyright (c) Huawei Technologies Co., Ltd. 2019.  ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

noinst_LTLIBRARIES      = libucg_base.la
libucg_base_la_CFLAGS   = $(BASE_CFLAGS)
libucg_base_la_CPPFLAGS = $(BASE_CPPFLAGS)

noinst_HEADERS = \
	ucg_plan.h \
	ucg_group.h

libucg_base_la_SOURCES = \
	ucg_plan.c \
	ucg_group.c \
	ucg_version.c
