#
# Copyright (c) Huawei Technologies Co., Ltd. 2019.  ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

noinst_LTLIBRARIES        = libucg_hicoll.la
libucg_hicoll_la_CFLAGS   = $(BASE_CFLAGS)
libucg_hicoll_la_CPPFLAGS = $(HICOLL_CPPFLAGS)
libucg_hicoll_la_LDFLAGS  = $(HICOLL_LDFLAGS)
libucg_hicoll_la_SOURCES  = hicoll.c
